# pseudo-repair-taxonomy

./: LICENSE  README.md
pseudo_repair_toolkit/: MANIFEST.md  README.md  pyproject.toml
pseudo_repair_toolkit/docs/: ANNOTATION_GUIDE.md  INPUT_SCHEMA.md  RELEASE_NOTES.md  TAXONOMY.md  VALIDATION_GUIDE.md
pseudo_repair_toolkit/examples/trajectories/: pr_scope_narrowing.json  pr_semantic_regression.json  pr_surface_suppression.json  pr_vulnerability_migration.json  regression.json  true_repair.json  vulnerability_mutation.json
pseudo_repair_toolkit/reports/: examples_batch_report.md
pseudo_repair_toolkit/scripts/: run_examples.sh
pseudo_repair_toolkit/src/pseudo_repair/: __init__.py  classifier.py  cli.py  io.py  report.py  schema.py  taxonomy.py
pseudo_repair_toolkit/src/pseudo_repair_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pseudo_repair_toolkit/tests/: test_classifier.py  test_cli.py
