[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudo-repair-toolkit"
version = "0.1.0"
description = "A runnable taxonomy and annotation toolkit for Pseudo-Repair in iterative LLM code refinement."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SysSoftwareSecLab" }]
license = { text = "MIT" }
keywords = ["LLM", "code repair", "security", "taxonomy", "pseudo-repair", "annotation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
pseudo-repair = "pseudo_repair.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
